# 2025QC-Reservoir

./: .gitmodules  CLAUDE.md  README-e.md  README.md
docs/: architecture-e.md  architecture.md  path_prediction-e.md  path_prediction.md  path_prediction_deployment-e.md  path_prediction_deployment.md  path_prediction_esn-e.md  path_prediction_esn.md  path_prediction_eth_evaluation-e.md  path_prediction_eth_evaluation.md  path_prediction_leg_finder-e.md  path_prediction_leg_finder.md  path_prediction_results-e.md  path_prediction_results.md  path_prediction_tools-e.md  path_prediction_tools.md  path_prediction_v2_improvements-e.md  path_prediction_v2_improvements.md  setup-e.md  setup.md
path_prediction_v2/: Dockerfile  README.md  compose.no-gpu.yaml  compose.yaml  docker_build.sh
path_prediction_v2/assets/: cyclonedds_profile.xml  entrypoint.sh  terminator_config
path_prediction_v2/ros2_ws/src/esn_path_prediction/: CMakeLists.txt  package.xml
path_prediction_v2/ros2_ws/src/esn_path_prediction/esn_path_prediction/: esn_path_prediction.py
path_prediction_v2/ros2_ws/src/leg_finder/: CMakeLists.txt  package.xml
path_prediction_v2/ros2_ws/src/leg_finder/launch/: leg_finder.launch.xml
path_prediction_v2/ros2_ws/src/leg_finder/launch/rviz/: config.rviz
path_prediction_v2/ros2_ws/src/leg_finder/src/: leg_finder_node.cpp
tools/: disturbance_response_test.py  esn_improvement_test.py  esn_parameter_tuning.py  esn_visualizer.py  esn_visualizer_v2.py  eth_direction_change_test.py  eth_esn_batch.py  eth_esn_visualizer.py  eth_method_comparison.py  eth_v1_v2_comparison.py  eth_v3_adaptive.py  lsm_trajectory_test.py  md2pdf.py  nonlinear_trajectory_test.py  person_tracking_esn_fx.py  synthetic_trajectory_test.py
